Add COMPACT_OBJECT_HEADERS